assets/main.css
/* ... */
::selection {
  background: #ff2e63;
  color: #ffffff;
}
article > h1 {
  font-size: 2.3rem;
}
article > h2 {
  font-size: 1.85rem;
  line-height: 1.2;
}
article > h3 {
  font-size: 1.5rem;
}
article > h4 {
  font-style: italic;
  font-weight: 400;
}
article ol,
article ul {
  margin: 1.5rem 0;
  list-style: none;
}
article ol {
  counter-reset: start-from 0;
}
article ol li::before {
  counter-increment: start-from;
  content: counter(start-from) ".";
  margin-top: 0.05rem;
}
article ul li::before {
  content: "▪";
  font-weight: bold;
}
article li {
  position: relative;
}
article li > ul,
article li > ol {
  margin: 0 0 0 1.5rem;
}
article li::before {
  color: #ff2e63;
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  font-weight: normal;
  left: -5em;
  padding-right: 0.5em;
  position: absolute;
  text-align: right;
  width: 5em;
}
article blockquote {
  background-color: #dddddd;
  border-left: 0.1rem solid #08d9d6;
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  padding: 1rem;
  margin-left: -1rem;
}
article blockquote p:last-of-type {
  margin-bottom: 0;
}
article figure {
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  margin: 1.5rem 0;
}
article figure > * {
  display: block;
  background-color: #dddddd;
  padding: 1rem;
}
article figure img {
  width: 100%;
}
article figcaption {
  background-color: #dddddd;
  font-size: 0.75rem;
  margin-top: -1rem;
  padding: 0.5rem 1rem;
}
article figcaption :last-child {
  margin-bottom: 0;
}
table {
  border-collapse: collapse;
  width: 100%;
}
table td,
table th {
  padding: 0.5rem;
  border-bottom: 1px solid #3a4252;
}
table th {
  font-weight: 600;
  text-align: left;
}
table.bordered td,
table.bordered th {
  border: 1px solid #3a4252;
}
header .description {
  margin: 0.5rem 0;
}
#home-welcome h1,
header h1 {
  font-size: 2.25rem;
  font-weight: 400;
  line-height: 1;
  margin-top: 0;
}
.content-grid {
  display: grid;
  grid-template-rows: auto 1fr auto;
  height: calc(100vh - 1em);
}
.viewport {
  margin: 0 auto;
  max-width: 1200px;
  padding: 1em;
  width: 65vw;
}
.description {
  font-family: "PT Serif", Georgia, "Times New Roman", Times, serif;
  font-size: 0.9rem;
  font-style: italic;
  font-weight: normal;
  line-height: 1.5rem;
}
.metadata {
  color: #3a4252;
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  font-size: 0.75rem;
}
.page > header {
  margin-bottom: 1rem;
}
.page > header > * + * {
  margin-top: 1rem;
}
.post :not(pre) > code {
  color: #922c4c;
}
.post footer {
  clear: both;
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  font-size: 0.75rem;
  margin-top: 1rem;
}
.post footer ul {
  margin: 0 0 0.5rem;
}
.post footer li::before {
  content: "";
}
.post footer .taxonomy {
  text-transform: uppercase;
}
.post footer .taxonomy li {
  display: inline;
  position: relative;
}
.post footer .taxonomy li::after {
  content: ",";
}
.post footer .taxonomy li:last-child::after {
  content: "";
}
.post footer .taxonomy li a {
  border-bottom: none;
}
.post footer .taxonomy li a:link,
.post footer .taxonomy li a:visited {
  color: #3a4252;
}
.post footer .taxonomy li a:hover,
.post footer .taxonomy li a:active {
  color: #ff2e63;
}
@media only screen and (min-width: 992px) {
  .browse {
    display: grid;
    grid-template-columns: 55% auto 40%;
  }
  .browse .taxonomy {
    grid-column: 3;
  }
  .dual {
    display: grid;
    grid-gap: 1rem;
    grid-auto-columns: 50fr 50fr;
    grid-auto-flow: column;
  }
  .dual figure {
    margin: 0;
    max-width: 100%;
  }
  figure.small {
    float: right;
    margin: 0 0 1rem 1rem;
    max-width: 50%;
  }
  .dual,
  article > figure.normal,
  .highlight {
    width: 110%;
    margin-left: -5%;
  }
}
.teaser {
  border-color: #5a667e;
  border-style: solid;
  border-width: 0 0 1px;
  font-size: 1rem;
  padding: 0.5rem 0;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .teaser time {
    float: right;
  }
}
.teaser .title {
  margin: 0;
}
.teaser .description {
  margin: 0;
}
.teaser a {
  border-bottom: none;
}
.teaser time {
  font-size: 0.75rem;
}
.group {
  border-color: #252a34;
  border-style: solid;
  border-width: 0.125rem 0 0;
  margin-top: 2rem;
}
.group .group-title {
  color: #252a34;
  border-color: #252a34;
  border-style: solid;
  border-width: 0 0 0.1rem;
  margin: 0;
  padding: 0.325rem 0;
  text-transform: uppercase;
}
.group a {
  border-bottom: none;
}
.group a span {
  display: block;
}
.fl-list li {
  border-bottom: 1px solid #3a4252;
}
@media only screen and (min-width: 768px) {
  .fl-list li {
    float: left;
    width: 48%;
  }
  .fl-list li:nth-child(2n) {
    margin-left: 4%;
  }
}
.fl-list li > a {
  display: block;
  padding: 5px 5px 5px 0;
  position: relative;
  text-transform: uppercase;
}
.fl-list .count {
  position: absolute;
  right: 0;
  top: 0.3rem;
}
.fl-list::after {
  clear: both;
  content: "";
  display: table;
}
.copyright {
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  font-size: 0.75rem;
}
.social a {
  border: none;
  margin-right: 0.25rem;
}
.icon {
  height: 1rem;
  width: 1rem;
  vertical-align: middle;
}
.icon.large {
  height: 2rem;
  width: 2rem;
}
.icon.small {
  height: 0.75rem;
  width: 0.75rem;
}
.icon.left {
  float: left;
  margin-right: 0.25rem;
}
.icon.right {
  float: right;
  margin-left: 0.25rem;
}
.pagination {
  display: grid;
  grid-template-columns: 30% auto 30%;
  margin-top: 1.5rem;
}
.pagination .previous {
  grid-column: 1;
  text-align: left;
}
.pagination span {
  grid-column: 2;
  text-align: center;
}
.pagination .next {
  grid-column: 3;
  text-align: right;
}
#site-header {
  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
  text-align: center;
  text-transform: uppercase;
}
#site-header a {
  border-bottom: none;
}
#site-header li {
  display: inline;
  margin: 0 0 0 2em;
}
#site-header .branding {
  float: left;
}
/* ... */

